cmake_minimum_required(VERSION 3.3)
project(solutions)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

add_executable(JsonWriterTest test_toolkit/json-writer-test.cc)

add_executable(0-1_knapsack 0-1_knapsack.cc)
add_executable(0-sum_subset 0-sum_subset.cc)
add_executable(2-difference 2-difference.cc)
add_executable(2-exists 2-exists.cc)
add_executable(2-for-all 2-for-all.cc)
add_executable(2_sum 2_sum.cc)
add_executable(3-sum-closest 3-sum-closest.cc)
add_executable(3-sum 3-sum.cc)
add_executable(4-sum 4-sum.cc)
add_executable(Add-binary add-binary.cc)
add_executable(Add-two-number-list add-two-number-list.cc)
add_executable(Add_operators_in_string Add_operators_in_string.cc)
add_executable(AddingCredits AddingCredits.cc)
add_executable(Anagrams Anagrams.cc)
add_executable(AnagramsTest AnagramsTest.cc)
add_executable(Anonymous_letter Anonymous_letter.cc)
add_executable(Anonymous_letterTest Anonymous_letterTest.cc)
add_executable(Approximate_sort Approximate_sort.cc)
add_executable(Arbitrage Arbitrage.cc)
add_executable(Average-top-3-scores average-top-3-scores.cc)
add_executable(Balanced_binary_tree Balanced_binary_tree.cc)
add_executable(Balanced_binary_treeTest Balanced_binary_treeTest.cc)
add_executable(Bentleybsearch Bentleybsearch.cc)
add_executable(Biggest_product_n-1 Biggest_product_n-1.cc)
add_executable(Biggest_product_n-1_math Biggest_product_n-1_math.cc)
add_executable(Bignumber_multiplication Bignumber_multiplication.cc)
add_executable(Binary-tree-level-order-bottom-up binary-tree-level-order-bottom-up.cc)
add_executable(Binary-tree-postorder-traversal-iterative-alternative binary-tree-postorder-traversal-iterative-alternative.cc)
add_executable(Binary-tree-postorder-traversal-iterative binary-tree-postorder-traversal-iterative.cc)
add_executable(Binary-tree-preorder-traversal-iterative binary-tree-preorder-traversal-iterative.cc)
add_executable(Binary-tree-zigzag-level-order-traversal binary-tree-zigzag-level-order-traversal.cc)
add_executable(Binary_search_Ai Binary_search_Ai=i.cc)
add_executable(Binary_search_circular_array Binary_search_circular_array.cc)
add_executable(Binary_search_circular_array_with_duplicates Binary_search_circular_array_with_duplicates.cc)
add_executable(Binary_search_first_k Binary_search_first_k.cc)
add_executable(Binary_search_larger_k Binary_search_larger_k.cc)
add_executable(Binary_search_unknown_length Binary_search_unknown_length.cc)
add_executable(Binary_tree_level_order Binary_tree_level_order.cc)
add_executable(Binary_tree_lock Binary_tree_lock.cc)
add_executable(Binary_tree_to_doubly_linked_list Binary_tree_to_doubly_linked_list.cc)
add_executable(Bonus-improved bonus-improved.cc)
add_executable(Bonus bonus.cc)
add_executable(BST_lowest_common_ancestor BST_lowest_common_ancestor.cc)
add_executable(BST_sorted_order BST_sorted_order.cc)
add_executable(BST_to_sorted_doubly_list BST_to_sorted_doubly_list.cc)
add_executable(Build_BST_from_sorted_array Build_BST_from_sorted_array.cc)
add_executable(Buy-and-sell-stock-twice buy-and-sell-stock-twice.cc)
add_executable(Buy-and-sell-stock buy-and-sell-stock.cc)
add_executable(C++11random c++11random.cc test_toolkit/tree_utils.h)
add_executable(Can_string_be_palindrome Can_string_be_palindrome.cc)
add_executable(Celebrity_finding Celebrity_finding.cc)
add_executable(Checking_cycle Checking_cycle.cc)
add_executable(Checking_cycle_alternative Checking_cycle_alternative.cc)
add_executable(Circular_queue Circular_queue.cc)
add_executable(Climb-stairs climb-stairs.cc)
add_executable(Clone-graph clone-graph.cc)
add_executable(Close_search Close_search.cc)
add_executable(Closest-int-same-bits-alternative closest-int-same-bits-alternative.cc)
add_executable(Closest_int_same_bits Closest_int_same_bits.cc)
add_executable(Closest_int_same_bits_alternative closest_int_same_bits_alternative.cc)
add_executable(Closest_pair_points Closest_pair_points.cc)
add_executable(Closest_palindrome Closest_palindrome.cc)
add_executable(Closest_stars Closest_stars.cc)
add_executable(Closest_to_median Closest_to_median.cc)
add_executable(Coin_change coin_change.cc)
add_executable(Collatz_conjecture Collatz_conjecture.cc)
add_executable(Combinations-unique combinations-unique.cc)
add_executable(Combinations combinations.cc)
add_executable(Compare_k-th_largest_in_heap Compare_k-th_largest_in_heap.cc)
add_executable(Completion_search Completion_search.cc)
add_executable(Completion_search_space_efficient Completion_search_space_efficient.cc)
add_executable(Compute_random_permutation compute_random_permutation.cc)
add_executable(Computing_binomial_coefficients Computing_binomial_coefficients.cc)
add_executable(Computing_x_n Computing_x^n.cc)
add_executable(Connect_leaves_binary_tree Connect_leaves_binary_tree.cc)
add_executable(Container-with-most-water container-with-most-water.cc)
add_executable(Container-with-most-waterTest container-with-most-waterTest.cc)
add_executable(Conversion_sorted_array Conversion_sorted_array.cc)
add_executable(Convert_base Convert_base.cc)
add_executable(Convert_baseTest Convert_baseTest.cc)
add_executable(Copying_postings_list Copying_postings_list.cc)
add_executable(Count_bits count_bits.cc)
add_executable(Count_inversions Count_inversions.cc)
add_executable(Count_occurrences_in_sentence Count_occurrences_in_sentence.cc)
add_executable(Cyclic-right-shift cyclic-right-shift.cc)
add_executable(Delete_list delete_list.cc)
add_executable(Deletion_list Deletion_list.cc)
add_executable(Descendant_and_ancestor Descendant_and_ancestor.cc)
add_executable(Distinct-sorted-list distinct-sorted-list.cc)
add_executable(Division Division.cc)
add_executable(Division_no_operator Division_no_operator.cc)
add_executable(DivisionFloat DivisionFloat.cc)
add_executable(Doors Doors.cc)
add_executable(Drawing_skylines Drawing_skylines.cc)
add_executable(Drawing_skylines_alternative drawing_skylines_alternative.cc)
add_executable(Dutch_national_flag Dutch_national_flag.cc)
add_executable(Dutch_national_flag_slow_inplace dutch_national_flag_slow_inplace.cc)
add_executable(Dutch_national_flag_two_passes dutch_national_flag_two_passes.cc)
add_executable(Elias_coding Elias_coding.cc)
add_executable(Eliminate_duplicate Eliminate_duplicate.cc)
add_executable(Equiv_classes Equiv_classes.cc)
add_executable(Even_odd_array even_odd_array.cc)
add_executable(Even_odd_merge_linked_list Even_odd_merge_linked_list.cc)
add_executable(Exterior_binary_tree Exterior_binary_tree.cc)
add_executable(Fibonacci fibonacci.cc)
add_executable(Find_element_appears_once Find_element_appears_once.cc)
add_executable(Find_k_largest_BST Find_k_largest_BST.cc)
add_executable(Find_kth_element_in_two_sorted_arrays Find_kth_element_in_two_sorted_arrays.cc)
add_executable(Find_longest_arithmetic_progression Find_longest_arithmetic_progression.cc)
add_executable(Find_missing_and_duplicate Find_missing_and_duplicate.cc)
add_executable(Find_missing_and_duplicate_XOR Find_missing_and_duplicate_XOR.cc)
add_executable(Finding_min_max Finding_min_max.cc)
add_executable(First-missing-positive first-missing-positive.cc)
add_executable(First-missing-positiveTest first-missing-positiveTest.cc)
add_executable(Gassing_up Gassing_up.cc)
add_executable(Gassing_upTest Gassing_upTest.cc)
add_executable(Gaussian_elimination Gaussian_elimination.cc)
add_executable(Gaussian_primes Gaussian_primes.cc)
add_executable(GCD GCD.cc)
add_executable(GCD1 GCD1.cc)
add_executable(Generate-parentheses generate-parentheses.cc)
add_executable(Generate_spiral_matrix Generate_spiral_matrix.cc)
add_executable(Generating-a-b-sqrt2-improved generating-a-b-sqrt2-improved.cc)
add_executable(Generating_a_b_sqrt2 Generating_a_b_sqrt2.cc)
add_executable(Gray-code-backtrack gray-code-backtrack.cc)
add_executable(Gray-code gray-code.cc)
add_executable(Hash_dictionary Hash_dictionary.cc)
add_executable(Height_determination Height_determination.cc)
add_executable(Highest-affinity-pairs highest-affinity-pairs.cc)
add_executable(House_majority House_majority.cc)
add_executable(Huffman_encoding Huffman_encoding.cc)
add_executable(Image_compression Image_compression.cc)
add_executable(Indirect_sort indirect_sort.cc)
add_executable(Inorder_traversal_with_parent Inorder_traversal_with_parent.cc)
add_executable(Insert-interval insert-interval.cc)
add_executable(Insert_list insert_list.cc)
add_executable(Insertion-deletion-BST insertion-deletion-BST.cc)
add_executable(Insertion-sort-list insertion-sort-list.cc)
add_executable(Integer-to-roman integer-to-roman.cc)
add_executable(Interconverting_string_integer Interconverting_string_integer.cc)
add_executable(Interleaving-string interleaving-string.cc)
add_executable(Intersect_rectangle Intersect_rectangle.cc)
add_executable(Intersect_sorted_arrays Intersect_sorted_arrays.cc)
add_executable(Intersect_sorted_arrays3Test Intersect_sorted_arrays3Test.cc)
add_executable(Is_binary_tree_a_BST is_binary_tree_a_BST.cc)
add_executable(Is_binary_tree_a_BST_BFS is_binary_tree_a_BST_BFS.cc)
add_executable(Is_binary_tree_a_BST_const_space is_binary_tree_a_BST_const_space.cc)
add_executable(Is_palindromic is_palindromic.cc)
add_executable(Job_assignment job_assignment.cc)
add_executable(Jump-game-min-steps jump-game-min-steps.cc)
add_executable(Jump-game jump-game.cc)
add_executable(Justify-text justify-text.cc)
add_executable(K-balanced_binary_tree k-balanced_binary_tree.cc)
add_executable(K-largest-elements-binary-heap k-largest-elements-binary-heap.cc)
add_executable(K-th_element_streaming k-th_element_streaming.cc)
add_executable(K-th_largest_element_large_n k-th_largest_element_large_n.cc)
add_executable(K-th_node_binary_tree k-th_node_binary_tree.cc)
add_executable(K-th_permutation k-th_permutation.cc)
#add_executable(Largearray largearray.c) #Cannot be compiled
add_executable(Largest_rectangle_under_skyline Largest_rectangle_under_skyline.cc)
add_executable(Lazy-init lazy-init.cc)
add_executable(Lead_changes Lead_changes.cc)
add_executable(Length-of-last-word length-of-last-word.cc)
add_executable(Levenshtein_distance Levenshtein_distance.cc)
add_executable(Line_most_points Line_most_points.cc)
add_executable(List-pivoting list-pivoting.cc)
add_executable(Load_balancing Load_balancing.cc)
add_executable(Longest-contained-range longest-contained-range.cc)
add_executable(Longest-subarray-with-distinct-entries longest-subarray-with-distinct-entries.cc)
add_executable(Longest-substring-without-repeating-characters longest-substring-without-repeating-characters.cc)
add_executable(Longest-valid-parentheses longest-valid-parentheses.cc)
add_executable(Longest_increasing_subarray Longest_increasing_subarray.cc)
add_executable(Longest_nondecreasing_subsequence Longest_nondecreasing_subsequence.cc)
add_executable(Longest_subarray_k Longest_subarray_k.cc)
add_executable(Longest_subarray_k_improved Longest_subarray_k_improved.cc)
add_executable(Longest_valid_parentheses_const_space longest_valid_parentheses_const_space.cc)
add_executable(Look-and-say look-and-say.cc)
add_executable(Lowest_common_ancestor Lowest_common_ancestor.cc)
add_executable(Lowest_common_ancestor_hash Lowest_common_ancestor_hash.cc)
add_executable(Lowest_common_ancestor_no_parent Lowest_common_ancestor_no_parent.cc)
add_executable(LRUCache LRUCache.cc)
add_executable(Matrix-rotation-flip matrix-rotation-flip.cc)
add_executable(Matrix_rotation Matrix_rotation.cc)
add_executable(Matrix_rotation_constant Matrix_rotation_constant.cc)
add_executable(Matrix_rotation_naive Matrix_rotation_naive.cc)
add_executable(Matrix_search Matrix_search.cc)
add_executable(Matrix_searchTest Matrix_searchTest.cc)
add_executable(Max-sum_subarray Max-sum_subarray.cc)
add_executable(Max_concatenation_numbers Max_concatenation_numbers.cc)
add_executable(Max_difference_k_pairs Max_difference_k_pairs.cc)
add_executable(Max_difference_unlimited_pairs Max_difference_unlimited_pairs.cc)
add_executable(Max_submatrix_rectangle Max_submatrix_rectangle.cc)
add_executable(Max_submatrix_rectangle_improved Max_submatrix_rectangle_improved.cc)
add_executable(Max_submatrix_square Max_submatrix_square.cc)
add_executable(Maximum_container Maximum_container.cc)
add_executable(Maximum_minimum_difference_k Maximum_minimum_difference_k.cc)
add_executable(Maximum_sliding_window Maximum_sliding_window.cc)
add_executable(Maximum_sliding_window_template Maximum_sliding_window_template.cc)
add_executable(Maximum_subarray_in_circular_array Maximum_subarray_in_circular_array.cc)
add_executable(Maximum_subarray_in_circular_array_constant_space Maximum_subarray_in_circular_array_constant_space.cc)
add_executable(Median_sorted_circular_linked_list Median_sorted_circular_linked_list.cc)
add_executable(Merge-two-sorted-arrays-in-place merge-two-sorted-arrays-in-place.cc)
add_executable(Merge_contacts merge_contacts.cc)
add_executable(Merge_sorted_arrays Merge_sorted_arrays.cc)
add_executable(Merge_sorted_lists Merge_sorted_lists.cc)
add_executable(Merge_two_BSTs Merge_two_BSTs.cc)
add_executable(Minimum_distance_3_sorted_arrays Minimum_distance_3_sorted_arrays.cc)
add_executable(Minimum_subarray_difference Minimum_subarray_difference.cc)
add_executable(Minimum_waiting_time Minimum_waiting_time.cc)
add_executable(Missing_element Missing_element.cc)
add_executable(Morris_traversal Morris_traversal.cc)
add_executable(Multibet_card_color_game Multibet_card_color_game.cc)
add_executable(MultiplyShiftAdd MultiplyShiftAdd.cc)
add_executable(N-queens-count n-queens-count.cc)
add_executable(N-queens-permutation n-queens-permutation.cc)
add_executable(N-queens n-queens.cc)
add_executable(Nearest_repetition Nearest_repetition.cc)
add_executable(Nearest_restaurant Nearest_restaurant.cc)
add_executable(Next_permutation Next_permutation.cc)
add_executable(Nonconstructible-change nonconstructible-change.cc)
add_executable(Nonuniform_random_number_generation nonuniform_random_number_generation.cc)
add_executable(Normalized_pathnames normalized_pathnames.cc)
add_executable(Normalized_pathnamesTest normalized_pathnamesTest.cc)
add_executable(Number-steps number-steps.cc)
add_executable(Number_ways Number_ways.cc)
add_executable(Number_waysTest Number_waysTest.cc)
add_executable(Number_ways_obstacles Number_ways_obstacles.cc)
add_executable(Offline_minimum Offline_minimum.cc)
add_executable(Offline_sampling Offline_sampling.cc)
add_executable(Online_median Online_median.cc)
add_executable(Online_sampling Online_sampling.cc)
add_executable(Order_statistic order_statistic.cc)
add_executable(Overlapping_days Overlapping_days.cc)
add_executable(Overlapping_lists Overlapping_lists.cc)
add_executable(Overlapping_lists_no_cycle Overlapping_lists_no_cycle.cc)
add_executable(Painting_iterative Painting_iterative.cc)
add_executable(Painting_recursive Painting_recursive.cc)
add_executable(Palindrome-number palindrome-number.cc)
add_executable(Palindrome-numberTest palindrome-numberTest.cc)
add_executable(Palindrome-partitioning-min-cuts palindrome-partitioning-min-cuts.cc)
add_executable(Palindrome-partitioning palindrome-partitioning.cc)
add_executable(Palindrome_linked_list Palindrome_linked_list.cc)
add_executable(Parity Parity.cc)
add_executable(Parity1 Parity1.cc)
add_executable(Partition-array partition-array.cc)
add_executable(Partition_2_same_average Partition_2_same_average.cc)
add_executable(Pascal-triangle-1 pascal-triangle-1.cc)
add_executable(Pascal-triangle-2 pascal-triangle-2.cc)
add_executable(Path-sum-binary-tree-all path-sum-binary-tree-all.cc)
add_executable(Path-sum-binary-tree path-sum-binary-tree.cc)
add_executable(Permutation_array Permutation_array.cc)
#add_executable(Permutations-alternative-profiled permutations-alternative-profiled.cc)
add_executable(Permutations-alternative permutations-alternative.cc)
add_executable(Permutations-unique permutations-unique.cc)
add_executable(Permutations permutations.cc)
add_executable(Phone_mnemonic Phone_mnemonic.cc)
add_executable(Picking_up_coins Picking_up_coins.cc)
add_executable(Picking_up_coins_dont_lose Picking_up_coins_dont_lose.cc)
add_executable(Planning_fishing Planning_fishing.cc)
add_executable(Plus-one plus-one.cc)
add_executable(Points_covering_intervals Points_covering_intervals.cc)
add_executable(Points_covering_intervals_alternative Points_covering_intervals_alternative.cc)
add_executable(Points_covering_intervals_sorting points_covering_intervals_sorting.cc)
add_executable(Populating-next-right-pointers-any-binary-tree populating-next-right-pointers-any-binary-tree.cc)
add_executable(Populating-next-right-pointers populating-next-right-pointers.cc)
add_executable(Power-x-y power-x-y.cc)
add_executable(Power_set Power_set.cc)
add_executable(Power_set_alternative Power_set_alternative.cc)
add_executable(Prefix-search prefix-search.cc)
add_executable(Pretty_printing Pretty_printing.cc)
add_executable(Prime-sieve-basic prime-sieve-basic.cc)
add_executable(Prime_sieve Prime_sieve.cc)
add_executable(Print_linked_list_reverse_order print_linked_list_reverse_order.cc)
add_executable(Queue_from_stacks Queue_from_stacks.cc)
add_executable(Queue_using_two_integers Queue_using_two_integers.cc)
add_executable(Queue_with_max Queue_with_max.cc)
add_executable(Queue_with_max_alternative Queue_with_max_alternative.cc)
add_executable(Queue_with_max_intro queue_with_max_intro.cc)
add_executable(Rabin-karp rabin-karp.cc)
add_executable(Range-lookup-BST range-lookup-BST.cc)
add_executable(Rays_covering_arcs Rays_covering_arcs.cc)
add_executable(Rearrange Rearrange.cc)
add_executable(Rebuild_BST_postorder Rebuild_BST_postorder.cc)
add_executable(Rebuild_BST_postorder_better Rebuild_BST_postorder_better.cc)
add_executable(Rebuild_BST_preorder Rebuild_BST_preorder.cc)
add_executable(Rebuild_BST_preorder_better Rebuild_BST_preorder_better.cc)
add_executable(Reconstruct-almost-bst reconstruct-almost-bst.cc)
add_executable(Reconstruct_binary_tree_post_in_orders Reconstruct_binary_tree_post_in_orders.cc)
add_executable(Reconstruct_binary_tree_pre_in_orders Reconstruct_binary_tree_pre_in_orders.cc)
add_executable(Reconstruct_preorder_with_null Reconstruct_preorder_with_null.cc)
add_executable(Recover-binary-search-tree-constant-space recover-binary-search-tree-constant-space.cc)
add_executable(Regular_expression Regular_expression.cc)
add_executable(Remove-duplicates-from-sorted-array remove-duplicates-from-sorted-array.cc)
add_executable(Remove-duplicates-sorted-list remove-duplicates-sorted-list.cc)
add_executable(Remove-element remove-element.cc)
add_executable(Remove-twice-duplicates-from-sorted-array remove-twice-duplicates-from-sorted-array.cc)
add_executable(Remove_kth_last_list Remove_kth_last_list.cc)
add_executable(Rendering_calendar Rendering_calendar.cc)
add_executable(Replace_and_remove Replace_and_remove.cc)
add_executable(Reservoir_sampling Reservoir_sampling.cc)
add_executable(Reverse-integer reverse-integer.cc)
add_executable(Reverse-list-in-k-group reverse-list-in-k-group.cc)
add_executable(Reverse_bits Reverse_bits.cc)
add_executable(Reverse_linked_list_from_s_to_f reverse_linked_list_from_s_to_f.cc)
add_executable(Reverse_linked_list_iterative Reverse_linked_list_iterative.cc)
add_executable(Reverse_linked_list_recursive Reverse_linked_list_recursive.cc)
add_executable(Reverse_words Reverse_words.cc)
add_executable(Road_network Road_network.cc)
add_executable(Roman-to-integer roman-to-integer.cc)
add_executable(Rook-attack rook-attack.cc)
add_executable(Rotate_array Rotate_array.cc)
add_executable(RPN RPN.cc)
add_executable(RPNTest RPNTest.cc)
add_executable(Run_length_compression Run_length_compression.cc)
add_executable(Score_combination Score_combination.cc)
add_executable(Score_combination_alternative Score_combination_alternative.cc)
add_executable(Score_permutation Score_permutation.cc)
add_executable(Scramble-string scramble-string.cc)
add_executable(Search-a-range-sorted-array search-a-range-sorted-array.cc)
add_executable(Search-insert-position-sorted-array search-insert-position-sorted-array.cc)
add_executable(Search-rotated-sorted-array-with-duplicates search-rotated-sorted-array-with-duplicates.cc)
add_executable(Search-rotated-sorted-array search-rotated-sorted-array.cc)
add_executable(Search_a_pair_sorted_array Search_a_pair_sorted_array.cc)
add_executable(Search_BST search_BST.cc)
add_executable(Search_BST_first_larger_k Search_BST_first_larger_k.cc)
add_executable(Search_BST_for_first_occurrence_iterative Search_BST_for_first_occurrence_iterative.cc)
add_executable(Search_BST_for_first_occurrence_recursive Search_BST_for_first_occurrence_recursive.cc)
add_executable(Search_frequent_items Search_frequent_items.cc)
add_executable(Search_list search_list.cc)
add_executable(Search_majority Search_majority.cc)
add_executable(Search_maze Search_maze.cc)
add_executable(Search_min_first_BST Search_min_first_BST.cc)
add_executable(Search_postings_list_iterative Search_postings_list_iterative.cc)
add_executable(Search_postings_list_recursive Search_postings_list_recursive.cc)
add_executable(Shortest_path_fewest_edges Shortest_path_fewest_edges.cc)
add_executable(Shortest_unique_prefix Shortest_unique_prefix.cc)
add_executable(Sliding_window Sliding_window.cc)
add_executable(Smallest_subarray_covering_set Smallest_subarray_covering_set.cc)
add_executable(Snake-string snake-string.cc)
add_executable(Snake-stringTest snake-stringTest.cc)
add_executable(Sort-list sort-list.cc)
add_executable(Sort_k-increasing-decreasing_array sort_k-increasing-decreasing_array.cc)
add_executable(Sorted_list_to_BST Sorted_list_to_BST.cc)
add_executable(Spiral_matrix Spiral_matrix.cc)
add_executable(Spiral_matrix_clockwise Spiral_matrix_clockwise.cc)
add_executable(Spreadsheet_encoding Spreadsheet_encoding.cc)
add_executable(Spreadsheet_encodingTest Spreadsheet_encodingTest.cc)
add_executable(Square-root-int square-root-int.cc)
add_executable(Square-root-intTest square-root-intTest.cc)
add_executable(Square_root Square_root.cc)
add_executable(Stable_assignment Stable_assignment.cc)
add_executable(Stack_queue_using_heap Stack_queue_using_heap.cc)
add_executable(Stack_sorting Stack_sorting.cc)
add_executable(Stack_with_max Stack_with_max.cc)
add_executable(Stack_with_max_improved Stack_with_max_improved.cc)
add_executable(String_in_matrix String_in_matrix.cc)
add_executable(String_matching_wildcard String_matching_wildcard.cc)
add_executable(Student_search student_search.cc)
add_executable(Student_sort student_sort.cc)
add_executable(Subseq_cover Subseq_cover.cc)
add_executable(Substring-with-concatenation-of-all-words substring-with-concatenation-of-all-words.cc)
add_executable(Successor Successor.cc)
add_executable(Sudoku_check sudoku_check.cc)
add_executable(Sudoku_solve Sudoku_solve.cc)
add_executable(Sudoku_solveTest Sudoku_solveTest.cc)
add_executable(Sum-root-to-leaf-binary-tree sum-root-to-leaf-binary-tree.cc)
add_executable(Surrounded-regions surrounded-regions.cc)
add_executable(Swap_bits swap_bits.cc)
add_executable(Symmetric_binary_tree Symmetric_binary_tree.cc)
add_executable(Tail Tail.cc)
add_executable(Tail_coin Tail_coin.cc)
add_executable(Task_assignment Task_assignment.cc)
add_executable(Team_photo_1 Team_photo_1.cc)
add_executable(Team_photo_2 Team_photo_2.cc)
add_executable(Team_reachability team_reachability.cc)
add_executable(Theory_of_equality Theory_of_equality.cc)
add_executable(Three_jugs Three_jugs.cc)
add_executable(Ties_election Ties_election.cc)
add_executable(Top_k top_k.cc)
add_executable(Tournament_tree Tournament_tree.cc)
add_executable(Tower_hanoi tower_hanoi.cc)
add_executable(Transform_string_to_other Transform_string_to_other.cc)
add_executable(Transitive_closure Transitive_closure.cc)
add_executable(Trapping-rain-water trapping-rain-water.cc)
add_executable(Tree_diameter Tree_diameter.cc)
add_executable(Tree_traversal tree_traversal.cc)
add_executable(Triangle triangle.cc)
add_executable(Uniform_random_number_generation Uniform_random_number_generation.cc)
add_executable(Union_intervals Union_intervals.cc)
add_executable(Unique-binary-trees-all unique-binary-trees-all.cc)
add_executable(Unique-binary-trees unique-binary-trees.cc)
add_executable(Update_BST Update_BST.cc)
add_executable(Valid-IP-address valid-IP-address.cc)
add_executable(Valid-number valid-number.cc)
add_executable(Valid-palindrome valid-palindrome.cc)
add_executable(Valid-parentheses valid-parentheses.cc)
add_executable(Valid_IP_address_recursive valid_IP_address_recursive.cc)
add_executable(View_from_above View_from_above.cc)
add_executable(View_sunset View_sunset.cc)
add_executable(Wiring_circuit_board Wiring_circuit_board.cc)
add_executable(Word-breaking-2 word-breaking-2.cc)
add_executable(Word_breaking Word_breaking.cc)
add_executable(Word_breaking_alternative Word_breaking_alternative.cc)
add_executable(Zigzag-conversion zigzag-conversion.cc)
add_executable(Zipping_list Zipping_list.cc)

#If thread support is enabled
if(ENV{_GLIBCXX_HAS_GTHREADS})
    add_executable(Two_thread_increment two_thread_increment.cc)
endif(ENV{_GLIBCXX_HAS_GTHREADS})
